# CatmullClarkSubdivision

./: .gitignore  CMakeLists.txt  README.md
include/catmull_clark/: catmull_clark.h  common.h  renderer.h
src/: catmull_clark.cpp  main.cpp  renderer.cpp
